
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 OCT 17a
  * in tools/chemkin2cfdwarp.c
    - fixed a few bugs and added code to read in the species from the CHEMKIN file
    
    
2022 OCT 14b
  * in src/common.c
    - in find_zone_intersection() and find_zone_from_argum() made sure ks,ke are given a value 
      even in 2D. This should not make any difference when running the code but eliminates a
      warning in valgrind


2022 OCT 14a
  * in cycle/share/cycle_share.c
    - in process_code_runtime(), set Runtimearg.CFLinit to -1.0
  * in src/control.c
    - in readcontrol_actions(), set readcontrolarg.CFLinit=CFLinit
  * in src/control.h
    - in read_control(), added CFLinit to the list of arguments
  * in src/main.c
    - in write_options(), added the option -CFL to reset the CFL number
    - in  main(), process the flag -CFL and read in CFLinit, and then add CFLinit to the 
      arguments of read_control()
      

2022 OCT 13a
  * in tools/inlet.c
    - added output of turning angle and shock angle for every shock
    

2022 OCT 12a
  * in lib/exm/exm.c
    - added function process_flag_long
  * in tools/inlet.c
    - complete rewrite so that it can be used specifying any number of shocks 


2022 OCT 06b
  * in bin/*wrp
    - updated files with NavierStokesPlasma() module to include recent constants added to the model
      

2022 OCT 06a
  * in model/share/chem_share.c
    - added add_to_*_*_2r2p_Lindemann() functions
  * in model/share/chem_share.h
    - listed add_to_*_*_2r2p_Lindemann() functions
  * in model/thermo/_generic/thermo.c
    - added species: C3H7, H2CC, CH2CHO
  * in model/thermo/_generic/thermo.hh
    - added species: C3H7, H2CC, CH2CHO to species map
  * in model/thermo/_generic/enthalpy.c