@@ -13,7 +13,8 @@ option   C12H23_Air_16s_23r_Kundu
 optionP  C12H23_Cs_Air_Plasma_21s
 option   CH4_Air_20s_52r_Yungster
 option   C2H4_Air_23s
-optionP  C2H4_Air_Plasma_30s
+optionP  C2H4_Air_30s
+optionP  C2H4_Air_Plasma_36s
 option   CO2_Plasma_23s_Park
 optionP   Cs_Air_Plasma_11s
 optionP   Cs_Air_Plasma_15s
