@@ -1,2 +1,0 @@
-current C2H4_Air_Plasma_30s
-END
